# adaptive-cards

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml  codeql-analysis.yml  docs.yaml  publish.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/search/: search_index.json
code-reference/actions/: index.html
code-reference/base/: index.html
code-reference/cards/: index.html
code-reference/containers/: index.html
code-reference/elements/: index.html
docs/: index.md  install.md
docs/code-reference/: actions.md  base.md  cards.md  containers.md  elements.md
docs/usage/: cards.md
docs/user-guide/: actions.md  base.md  cards.md  containers.md  elements.md
install/: index.html
search/: search_index.json
src/adaptivecards/: __init__.py  actions.py  base.py  cards.py  client.py  containers.py  elements.py  types.py
src/msadaptivecards/: actions.py  base.py  cards.py  containers.py
tests/: conftest.py  test_actions.py  test_cards.py  test_containers.py
tests/features/: card.feature
user-guide/actions/: index.html
user-guide/base/: index.html
user-guide/cards/: index.html
user-guide/containers/: index.html
user-guide/elements/: index.html
