[tool.poetry]
name = "ms-adaptive-cards"
version = "0.1.0"
description = "Python implementation of Microsoft Adaptive Cards"
authors = ["Idar Bergli <idarb@pm.me>"]
readme = "README.md"
packages = [{include = "msadaptivecards", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^1.9.1"
pyhumps = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-bdd = "^6.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-xdist = "^2.5.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.6.0"
coverage = "^6.4.3"
pre-commit = "^2.20.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-markdownextradata-plugin = "^0.2.5"
featherlight = { git = "https://github.com/it-novum/mkdocs-featherlight.git", branch = "main"}
mike = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["adaptivecards"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
